@@ -950,7 +950,7 @@ void o_arc_end1(TOPLEVEL *w_current, int x, int y)
   int diff_x, diff_y;
 	
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
