@@ -947,7 +947,7 @@ void o_box_end(TOPLEVEL *w_current, int x, int y)
   int box_left, box_top;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
@@ -1023,7 +1023,7 @@ void o_box_end(TOPLEVEL *w_current, int x, int y)
 void o_box_rubberbox(TOPLEVEL *w_current, int x, int y)
 {
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
