@@ -643,7 +643,7 @@ void o_circle_end(TOPLEVEL *w_current, int x, int y)
   int radius;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
@@ -726,7 +726,7 @@ void o_circle_rubbercircle(TOPLEVEL *w_current, int x, int y)
   int diff_x, diff_y;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
