@@ -843,7 +843,7 @@ void o_line_end(TOPLEVEL *w_current, int x, int y)
   int x2, y2;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
@@ -916,7 +916,7 @@ void o_line_rubberline(TOPLEVEL *w_current, int x, int y)
   int diff_x, diff_y;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
