@@ -214,7 +214,7 @@ void o_pin_end(TOPLEVEL *w_current, int x, int y)
   OBJECT *o_current, *o_current_pin;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
@@ -288,7 +288,7 @@ void o_pin_rubberpin(TOPLEVEL *w_current, int x, int y)
   int diff_x, diff_y;
 
   if (w_current->inside_action == 0) {
-    o_redraw(w_current, w_current->page_current->object_head);
+    o_redraw(w_current, w_current->page_current->object_head, TRUE);
     return;
   }
 
